# ostis-web-platform

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  docker-compose.yml  ostis-web-platform-components-specification.scs  ostis-web-platform.ini  repo.path  repo_add.path  web-platform-config.ini
.github/ISSUE_TEMPLATE/: bug_report.md
config/: sc-web.ini  server.conf  settings_local.py
docs/: changelog.md  main.tex  ostis_web_platform.tex
kb/: ostis-web-platform-components-specification.scs  ostis_web_platform_components_specification.scs
scripts/: bootstrap-ostis-stage1.ps1  bootstrap-ostis-stage2.ps1  bootstrap-ostis-win64.cmd  build_add_kb.sh  build_kb.cmd  build_kb.sh  build_platform.sh  build_sc_component_manager.sh  build_sc_machine.sh  build_sc_web.sh  build_scp_machine.sh  clean.sh  clone_project.sh  clone_standard.sh  clone_update_submodule.sh  copy_ims_kb.sh  dump_saver.sh  fix_libhiredis.sh  formats.sh  install_component_manager_platform.sh  install_core_dependencies.sh  install_core_submodules.sh  install_dependencies.sh  install_ims_kb_submodule.sh  install_minimal_platform.sh  install_minimal_submodules.sh  install_npm_18x.sh  install_platform.sh  install_platform_with_component_manager.sh  install_sc_component_manager_dependencies.sh  install_sc_component_manager_submodule.sh  install_sc_machine_dependencies.sh  install_sc_machine_submodule.sh  install_sc_web_dependencies.sh  install_sc_web_submodule.sh  install_scn.sh  install_scp_component.sh  install_submodules.sh  kb.bin_backup.sh  make_all.sh  (+16 more)
tools/scs/: builder.py  (+4 more)
(+324 files in other folders)
